tests/expectations/compiler/core/algorithms/pedersen_fail.out
DCE_ENABLED:
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `u128` was found.
    --> compiler-test:4:50
     |
   4 |         let a: group = Pedersen64::hash_to_field(1u128); // Pedersen64 hash_to_field returns a field type
     |                                                  ^^^^^
Error [ETYC0372117]: Expected type `group` but type `field` was found.
    --> compiler-test:4:24
     |
   4 |         let a: group = Pedersen64::hash_to_field(1u128); // Pedersen64 hash_to_field returns a field type
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372117]: Expected an integer of less than 64 bits or a bool but type `u128` was found.
    --> compiler-test:4:50
     |
   4 |         let a: group = Pedersen64::hash_to_field(1u128); // Pedersen64 hash_to_field returns a field type
     |                                                  ^^^^^
Error [ETYC0372117]: Expected type `group` but type `field` was found.
    --> compiler-test:4:24
     |
   4 |         let a: group = Pedersen64::hash_to_field(1u128); // Pedersen64 hash_to_field returns a field type
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
